# learning-tool

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  issues-draft.md  pyproject.toml  something.md
.claude/: settings.json
.claude/commands/: debug-annotation.md  implement-issue.md  refine-issue.md  serve.md  start-issue.md  update-notes.md
.claude/hooks/: lint-on-edit.sh  pre-commit-checks.sh
.claude/memory/: MEMORY.md  feedback_coding_patterns.md  feedback_commits.md  feedback_deps.md  feedback_git_workflow.md  feedback_pr_closing_keywords.md  project_setup_plan.md  project_worktree_setup.md  reference_langfuse.md  user_python_level.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
adapters/mcp/: server.py
alembic/: env.py  script.py.mako
alembic/versions/: 001_baseline.py  002_idx_attempts_question_id.py  003_add_focus_area_to_attempts.py  004_nullable_score.py
api/: main.py  models.py
api/static/: style.css
api/templates/: admin_annotations.html  admin_contexts.html  admin_index.html  annotated.html  annotation_form.html  bank_empty.html  capture.html  capture_export.html  evaluation_report_form.html  feedback.html  flagged.html  history.html  import_result.html  index.html  practice.html  question.html  session.html  start.html
cli/: main.py
core/: llm.py  llm_anthropic.py  models.py  settings.py
core/context_import/: draft_store.py
core/evaluation/: evaluate.py  export_evaluation_prompt.md  export_prompt.py  paste_back.py  prompt.py
core/ingestion/: chunker.py  context.py  embedder.py  ingest.py  sources.py  store.py
core/llm/: constants.py  protocols.py
core/question/: generate.py  generate_gemini.py  loader.py  prompt.py  store.py
core/rag/: retriever.py  similarity.py
core/session/: models.py  store.py
docs/: preview.css
docs/conventions/: 001-git-workflow.md  002-issue-format.md  003-engineering-principles.md  004-code-style.md
docs/decisions/: 001-web-ui-htmx-over-gradio.md  002-context-stuffing-over-rag.md  002-rag-numpy-before-chromadb.md  003-domain-agnostic-core.md  004-xml-tags-in-prompts.md  005-hand-rolled-fakes-over-mocks.md  006-structured-outputs-for-evaluation.md  007-model-selection-per-task.md  008-llm-provider-abstraction.md  009-separate-api-schemas-from-domain-models.md  010-sqlite-for-session-storage.md  011-session-store-vs-langfuse.md  012-prompt-traceability-via-git.md  013-alembic-migration-strategy.md  013-rag-scope-structured-context-in-prompt.md  014-question-bank-over-generation.md  015-context-name-validation.md  016-learner-profile-per-context.md  017-validate-uncontrolled-llm-input-at-api-boundary.md
docs/design/: chat-integration-mcp.md
docs/learnings/: python.md  rag.md
docs/reference/: schema.md
tests/: conftest.py  fakes.py  test_api_admin.py  test_api_admin_contexts.py  test_api_admin_index.py  test_api_annotate.py  test_api_archive_context.py  test_api_attempts.py  test_api_bank.py  test_api_capture.py  test_api_draft.py  test_api_escalate.py  test_api_evaluate.py  test_api_flag.py  test_api_health.py  test_api_history.py  test_api_import_confirm.py  test_api_index.py  test_api_logging.py  test_api_mcp_questions.py  test_api_new_context.py  test_api_paste_back.py  test_api_question.py  test_api_report.py  test_api_session_results.py  test_api_submit.py  test_api_ui.py  test_chunking.py  test_cli.py  test_context_extraction.py  test_context_import_parser.py  test_context_name.py  test_cosine_similarity.py  test_draft_store.py  test_embedder.py  test_evaluation_evaluate.py  test_evaluation_paste_back.py  test_evaluation_prompt.py  test_ingest.py  test_ingest_integration.py  (+18 more)
tests/api/: test_api_admin.py  test_api_admin_contexts.py  test_api_admin_index.py  test_api_annotate.py  test_api_attempts.py  test_api_bank.py  test_api_capture.py  test_api_draft.py  test_api_escalate.py  test_api_evaluate.py  test_api_flag.py  test_api_health.py  test_api_history.py  test_api_import_confirm.py  test_api_logging.py  test_api_question.py  (+6 more)
(+85 files in other folders)
