[project]
name = "learning-tool"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.3.0",
    "typer>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.isort]
known-first-party = ["core"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -m 'not slow'"
pythonpath = ["."]
markers = ["slow: requires real model, run with -m slow"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "types-pyyaml>=6.0.12.20250915",
]
